syntax = "proto3";

package pb;

option go_package = "github.com/steve-mir/diivix_backend/pb";

message UpdateAccountDetailsRequest {
  string account_name = 1;
  string account_number = 2;
  string bank_name = 3;
}

message UpdateAccountDetailsResponse {
  string msg = 1;
}

